--- a/WebApplication2/WebApplication2/Scripts/app/views/consulta.html
+++ b/WebApplication2/WebApplication2/Scripts/app/views/consulta.html
@@ -7,8 +7,8 @@
                 <th>Nome</th>
             </tr>
             <tr data-ng-repeat="pessoa in pessoas">
-                <td ng-bind="pessoa.Codigo"></td>
-                <td ng-bind="pessoa.Nome"></td>
+                <td ng-bind="pessoa.codigo"></td>
+                <td ng-bind="pessoa.nome"></td>
             </tr>
         </table>
     </div>
