--- a/WebApplication2/WebApplication2/Views/Home/Index.cshtml
+++ b/WebApplication2/WebApplication2/Views/Home/Index.cshtml
@@ -29,10 +29,10 @@
     </div>
     <script type="text/javascript" src="//code.jquery.com/jquery-1.11.2.min.js"></script>
     <script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
-    <script type="text/javascript" src="/Scripts/libs/angular.min.js"></script>
-    <script type="text/javascript" src="/Scripts/libs/angular-route.min.js"></script>
-    <script type="text/javascript" src="/Scripts/app/app.js"></script>
-    <script type="text/javascript" src="/Scripts/app/controllers/pessoaCadastroController.js"></script>
-    <script type="text/javascript" src="/Scripts/app/controllers/pessoaConsultaController.js"></script>
+    <script type="text/javascript" src="~/Scripts/libs/angular.min.js"></script>
+    <script type="text/javascript" src="~/Scripts/libs/angular-route.min.js"></script>
+    <script type="text/javascript" src="~/Scripts/app/app.js"></script>
+    <script type="text/javascript" src="~/Scripts/app/controllers/pessoaCadastroController.js"></script>
+    <script type="text/javascript" src="~/Scripts/app/controllers/pessoaConsultaController.js"></script>
 </body>
 </html>
